--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -31,9 +31,9 @@ a {
 }
 
 .landing__image {
-  height: 30vh;
-  width: 30vh;
-  background-image: linear-gradient(33deg, lime, lightgreen);
+  height: 50vh;
+  width: 50vh;
+  /* background-image: linear-gradient(33deg, lime, lightgreen); */
 }
 
 .process {
@@ -71,7 +71,7 @@ a {
 .footer__link {
   margin: auto;
   color: var(--limegreen);
-  border: 1px currentColor solid;
+  border: 1px var(--limegreen) solid;
   border-radius: 15px;
   transition: color 150ms ease-in, border 150ms ease-in;
   font-size: 1.6em;
