--- a/src/views/home/home.css
+++ b/src/views/home/home.css
@@ -25,7 +25,7 @@ a {
 }
 
 .landing__text {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   align-self: flex-end;
   color: var(--limegreen);
 }
@@ -33,7 +33,7 @@ a {
 .landing__image {
   height: 50vh;
   width: 50vh;
-  /* background-image: linear-gradient(33deg, lime, lightgreen); */
+  margin-top: -5rem;
 }
 
 .process__title {
